# kvpress

./: AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
evaluation/: README.md  evaluate.py  evaluate_config.yaml  evaluate_registry.py
evaluation/benchmarks/longbench/: calculate_metrics.py
kvpress/: __init__.py  pipeline.py
kvpress/presses/: block_press.py  dms_press.py  fastkvzip_press.py  kvzap_press.py  kvzip_press.py
kvzap/: README.md  data.py  evaluate_aime.py  train.py
notebooks/: speed_and_memory.ipynb
script/: test-environment.sh  test-kvzap-hotpotqa.sh  test-kvzap.sh
tests/: default_presses.py  fixtures.py  test_decoding_compression.py  test_environment.py  test_kvzap.py  test_kvzap_hotpotqa.py  test_pipeline.py  test_press_call.py
tests/data/: kvzap_doc.txt
tests/integration/: test_ruler.py
tests/presses/: test_head_compression.py  test_key_rerotation_press_rope.py  test_presses.py
